src/tests/fixtures/arguments/NoArgsWithNever.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export default class SomeType {
  /** @gqlField */
  hello(args: never): string {
    console.log("hello");
    return "Hello world!";
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/arguments/NoArgsWithNever.ts:4:15 - error: Unexpected `never` type for resolver argument. If a resolver argument is not needed by the resolver, it may be omitted.

4   hello(args: never): string {
                ~~~~~
